# Text-Summariser

./: README.md  dependencies.py  main.py  pegasus.py  pyproject.toml  textranksummariser.py  tfidf.py
