[project]
name = "text-summariser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning",
    "networkx>=3.5",
    "nltk==3.9.1",
    "pegasus>=0.1.3",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers",
]

[tool.uv.sources]
lightning = { git = "https://github.com/PyTorchLightning/pytorch-lightning" }
transformers = { git = "https://github.com/stas00/transformers" }


